# docs-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  release.yml
.roo/: mcp.json
.roo/rules/: 01-versions.md  02-documentation.md  03-committing-changes.md
docs/: development.md  usage.md
examples/: client.rs
src/: docs.rs  jsonrpc_frame_codec.rs  lib.rs  utils.rs
src/docs/: tests.rs
src/jsonrpc_frame_codec/: tests.rs
src/server/: mod.rs  tests.rs
src/server/axum_docs/: mod.rs
src/server/http_sse_server/: tests.rs
src/tools/: docs.rs  mod.rs
src/tools/docs/: docs.rs  mod.rs  tests.rs
src/transport/: http_sse_server.rs  jsonrpc_frame_codec.rs  mod.rs
src/transport/http_sse_server/: http_sse_server.rs  mod.rs  tests.rs
src/transport/jsonrpc_frame_codec/: jsonrpc_frame_codec.rs  mod.rs  tests.rs
tests/: integration_tests.rs
