[package]
name = "cratedocs-mcp"
version = "0.1.0"
edition = "2021"
description = "Rust Documentation MCP Server for LLM crate assistance"
authors = ["Claude <noreply@anthropic.com>"]
license = "MIT"
repository = "https://github.com/d6e/cratedocs-mcp"

[workspace]
members = [
    ".",
]

[dependencies]
# MCP dependencies from GitHub
mcp-server = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "c0bd94dd85a3535cb1580424465140d51bab2a17", package = "mcp-server" }
mcp-core = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "c0bd94dd85a3535cb1580424465140d51bab2a17", package = "mcp-core" }
mcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "c0bd94dd85a3535cb1580424465140d51bab2a17", package = "mcp-macros" }

# HTTP and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.8", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"]}
tower = "0.4"
tower-service = "0.3"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

# Main binary with subcommands
[[bin]]
name = "cratedocs"
path = "src/bin/cratedocs.rs"

# Keep existing binaries for backward compatibility
[[bin]]
name = "stdio-server"
path = "src/bin/stdio_server.rs"

[[bin]]
name = "http-sse-server"
path = "src/bin/sse_server.rs"
